# Voice2Text-Lab

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  utils.py
configs/: models_configs.yaml  pipeline_configs.yaml  streamlit_configs.yaml
models/: whisper.py
notebooks/: text_eda.ipynb
prompts/: phi4_speech_prompt_system  phi4_speech_prompt_user
src/: __init__.py  global_configs.py  jobs.py
src/data_ingestion/: metadata_extraction.py  text_extraction.py  text_preprocessing.py  web_download.py
src/ner_summarizations/: combine_results.py  ner_detection.py  text_summarization.py
src/song_inference/: inference_pipeline.py  ner.py  separate.py  summarize.py  transcribe.py
src/speech_inference/: pre_compute.py  text_inference.py
text-analytics-zty/: app.py  pyproject.toml  requirements.txt
text-analytics-zty/configs/: models_configs.yaml  pipeline_configs.yaml
text-analytics-zty/notebooks/: text_eda.ipynb
text-analytics-zty/prompts/: phi4_speech_prompt_system
text-analytics-zty/src/: __init__.py  global_configs.py  jobs.py
text-analytics-zty/src/data_ingestion/: metadata_extraction.py
text-analytics-zty/src/ner_summarizations/: text_summarization.py
text-analytics-zty/src/song_inference/: inference_pipeline.py  ner.py  separate.py  summarize.py  transcribe.py
text-analytics-zty/tools/models/: facebook_bart.py  google_flan.py  microsoft_phi.py
text-analytics-zty/tools/utils/: json_utils.py  streamlit_utils.py
tools/models/: whisper_ai.py
tools/utils/: streamlit_utils.py
