[project]
name = "Voice_To_Text_To_Voice"
version = "1.0.0"
description = "A Text Analytics and Generative AI project combining voice to text summarization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.7.0",
    "dagit>=1.10.15",
    "dagster>=1.10.15",
    "dagster-webserver>=1.10.15",
    "gliner>=0.2.20",
    "httpx>=0.28.1",
    "numpy>=2.2.6",
    "polars>=1.29.0",
    "sentencepiece==0.1.99",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.51.3",
]

[tool.dagster]
module_name = "src"
